linux-2.6-openmoko (20080808.git43620428-2) UNRELEASED; urgency=low

  * debian/control:
    + reword the team name.
    + add myself to Uploaders:.
    + add Vcs-* fields.
    + Build-Depends: on quilt.
    + use upstream clean target.
    - remove gcc-4.1 from Build-Depends:.

  * debian/patches/series: new file.
  * debian/patches/01_fix-timespec_add_ns-in-time.h.patch:
    + backport upstream fix for missing __udivdi3, Openmoko kernel
      commit 38332cb98772f5ea757e6486bed7ed0381cb5f98.

  * debian/rules:
    + correct typo s/ARM/ARCH/.
    + add missing \ for modules_install.
    + adapt to quilt.
    - don't build with gcc-4.1.

 --

linux-2.6-openmoko (20080808.git43620428-1) experimental; urgency=low

  * Initial release of a kernel package building uboot images suitable
    for use on the Neo Freerunner and corresponding modules.

 -- Philipp Kern <pkern@debian.org>  Fri, 08 Aug 2008 02:14:25 -0300
